--- a/dev/explore.ipynb
+++ b/dev/explore.ipynb
@@ -2,30 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.chdir(\"/Users/andrea/Development/pysparkonpolars\")\n",
+    "os.chdir(\"/Users/andreasorrentino/pysparkonpolars/pysparkonpolars\")\n",
     "os.environ[\"PYTHONPATH\"] = \".\"\n",
-    "os.environ[\"JAVA_HOME\"] = \"/usr/local/opt/openjdk@17/libexec/openjdk.jdk/Contents/Home\""
+    "os.environ[\"JAVA_HOME\"] = \"/usr/local/opt/openjdk@17/libexec/openjdk.jdk/Contents/Home\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pyspark/context.py:317: FutureWarning: Python 3.7 support is deprecated in Spark 3.4.\n",
-      "  warnings.warn(\"Python 3.7 support is deprecated in Spark 3.4.\", FutureWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pysparkpl.sql.sparksession import SessionHelper\n",
     "\n",
@@ -35,70 +26,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[Row(a=1, b=2, a=1, b=2), Row(a=3, b=4, a=3, b=4)]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---+---+---+\n",
+      "|  a|  b|  a|  b|\n",
+      "+---+---+---+---+\n",
+      "|  1|  2|  1|  2|\n",
+      "|  3|  4|  3|  4|\n",
+      "+---+---+---+---+\n",
+      "\n"
+     ]
     }
    ],
    "source": [
+    "from pyspark.sql.functions import col\n",
     "ps_dfl = ps_spark.createDataFrame([[1, 2], [3, 4]], [\"a\", \"b\"])\n",
     "ps_dfr = ps_spark.createDataFrame([[1, 2], [3, 4]], [\"a\", \"b\"])\n",
     "\n",
-    "ps_dfj = ps_dfl.join(ps_dfr, ps_dfl.a == ps_dfr.a, how=\"inner\")\n",
-    "ps_dfj.collect()"
+    "ps_dfj = ps_dfl.join(ps_dfr, ps_dfl.a==ps_dfr.a, how=\"inner\")\n",
+    "ps_dfj.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[Row(a=1, b=3), Row(a=2, b=4), Row(a=1, b=3), Row(a=2, b=4)]"
+       "   a  b  a  b\n",
+       "0  3  4  3  4"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import polars as pl\n",
     "pl_dfl = pl_spark.createDataFrame([[1, 2], [3, 4]], [\"a\", \"b\"])\n",
     "pl_dfr = pl_spark.createDataFrame([[1, 2], [3, 4]], [\"a\", \"b\"])\n",
     "\n",
-    "pl_dfj = pl_dfl.join(pl_dfr, pl_dfl.a == pl_dfr.a, how=\"inner\")\n",
-    "pl_dfj.collect()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'0x7f8b815cda10'"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hex(id(pl_dfj))"
+    "pl_dfj = pl_dfl.join(pl_dfr, (pl_dfl.a==pl_dfr.a) & (pl_dfl.b==pl_dfr.b) & (pl_dfl.a > 1), how=\"inner\")\n",
+    "pl_dfj.select(pl_dfl.a, pl_dfl.b, pl_dfr.a, pl_dfr.b).toPandas()\n",
+    "\n",
+    "\n"
    ]
   },
   {
