--- a/dev/explore.ipynb
+++ b/dev/explore.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -48,13 +48,13 @@
     "ps_dfl = ps_spark.createDataFrame([[1, 2], [3, 4]], [\"a\", \"b\"])\n",
     "ps_dfr = ps_spark.createDataFrame([[1, 2], [3, 4]], [\"a\", \"b\"])\n",
     "\n",
-    "ps_dfj = ps_dfl.join(ps_dfr, ps_dfl.a==ps_dfr.a, how=\"inner\")\n",
+    "ps_dfj = ps_dfl.join(ps_dfr, ps_dfl.a==ps_dfr.a, how=\"cross\")\n",
     "ps_dfj.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -80,8 +80,8 @@
        "      <th></th>\n",
        "      <th>a</th>\n",
        "      <th>b</th>\n",
-       "      <th>a</th>\n",
        "      <th>b</th>\n",
+       "      <th>c</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -89,30 +89,30 @@
        "      <th>0</th>\n",
        "      <td>3</td>\n",
        "      <td>4</td>\n",
-       "      <td>3</td>\n",
        "      <td>4</td>\n",
+       "      <td>world</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   a  b  a  b\n",
-       "0  3  4  3  4"
+       "   a  b  b      c\n",
+       "0  3  4  4  world"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import polars as pl\n",
-    "pl_dfl = pl_spark.createDataFrame([[1, 2], [3, 4]], [\"a\", \"b\"])\n",
+    "pl_dfl = pl_spark.createDataFrame([[1, 2, \"hello\"], [3, 4, \"world\"]], [\"a\", \"b\", \"c\"])\n",
     "pl_dfr = pl_spark.createDataFrame([[1, 2], [3, 4]], [\"a\", \"b\"])\n",
     "\n",
     "pl_dfj = pl_dfl.join(pl_dfr, (pl_dfl.a==pl_dfr.a) & (pl_dfl.b==pl_dfr.b) & (pl_dfl.a > 1), how=\"inner\")\n",
-    "pl_dfj.select(pl_dfl.a, pl_dfl.b, pl_dfr.a, pl_dfr.b).toPandas()\n",
+    "pl_dfj.select(pl_dfl.a, pl_dfl.b, pl_dfr.b, \"c\").toPandas()\n",
     "\n",
     "\n"
    ]
