--- a/dev/explore.ipynb
+++ b/dev/explore.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -94,33 +94,11 @@
        "      <th></th>\n",
        "      <th>a</th>\n",
        "      <th>b</th>\n",
-       "      <th>c</th>\n",
-       "      <th>a</th>\n",
-       "      <th>b</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>hello</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>hello</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>world</td>\n",
        "      <td>3</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
@@ -129,13 +107,11 @@
        "</div>"
       ],
       "text/plain": [
-       "   a  b      c  a  b\n",
-       "0  1  2  hello  1  2\n",
-       "1  1  2  hello  3  5\n",
-       "2  3  4  world  3  5"
+       "   a  b\n",
+       "0  3  5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +123,7 @@
     "\n",
     "pl_dfj = pl_dfl.join(pl_dfr, (pl_dfl.a<=pl_dfr.a) & (pl_dfl.b <= pl_dfr.b) & (pl_dfl.a >= 1), how=\"inner\")\n",
     "\n",
-    "pl_dfj.toPandas()\n"
+    "pl_dfr.filter((pl_dfr.a>1)).toPandas()\n"
    ]
   },
   {
